feat(orchestration): persist atlas layout, insert new tiles, merge heightfield LOD (Phase 6.8)
全量 tile 写 atlas-layout.json 并随清单发布；增量补丁可插入新瓦片；LOD 用 heightfield.bin 清 region 后合并再重网格。