@@ -1,10 +1,5 @@
 package online.yudream.voxelith.tile.infrastructure.artifact;
 
-import com.google.gson.Gson;
-import com.google.gson.GsonBuilder;
-import com.google.gson.JsonObject;
-import com.google.gson.JsonParser;
-import com.google.gson.reflect.TypeToken;
 import online.yudream.voxelith.tile.application.AtlasReuse;
 import online.yudream.voxelith.tile.application.PublishedAtlas;
 import online.yudream.voxelith.tile.domain.atlas.AtlasLayout;
@@ -12,11 +7,8 @@ import online.yudream.voxelith.tile.domain.atlas.AtlasPacker.AtlasResult;
 
 import java.io.IOException;
 import java.io.UncheckedIOException;
-import java.lang.reflect.Type;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.util.LinkedHashMap;
-import java.util.Map;
 import java.util.Optional;
 
 /**
@@ -25,9 +17,7 @@ import java.util.Optional;
  */
 public final class FilePublishedAtlas implements PublishedAtlas {
 
-    private static final Type CELL_INDEX = new TypeToken<LinkedHashMap<String, Integer>>() { }.getType();
     private final Path publishRoot;
-    private final Gson gson = new GsonBuilder().setPrettyPrinting().create();
 
     public FilePublishedAtlas(Path publishRoot) {
         this.publishRoot = publishRoot;
@@ -37,18 +27,12 @@ public final class FilePublishedAtlas implements PublishedAtlas {
     public Optional<AtlasReuse> load(String mapId) {
         Path mapDir = publishRoot.resolve(mapId);
         Path pngFile = mapDir.resolve("atlas.png");
-        Path layoutFile = mapDir.resolve("atlas-layout.json");
+        Path layoutFile = mapDir.resolve(AtlasLayoutFiles.FILE_NAME);
         if (!Files.isRegularFile(pngFile) || !Files.isRegularFile(layoutFile)) {
             return Optional.empty();
         }
         try {
-            JsonObject root = JsonParser.parseString(Files.readString(layoutFile)).getAsJsonObject();
-            Map<String, Integer> cells = gson.fromJson(root.get("cellIndex"), CELL_INDEX);
-            AtlasLayout layout = new AtlasLayout(
-                    root.get("cellSize").getAsInt(),
-                    root.get("cols").getAsInt(),
-                    root.get("pixelSize").getAsInt(),
-                    cells);
+            AtlasLayout layout = AtlasLayoutFiles.read(layoutFile);
             return Optional.of(new AtlasReuse(layout, Files.readAllBytes(pngFile)));
         } catch (IOException e) {
             throw new UncheckedIOException("读取已发布图集失败: " + mapDir, e);
@@ -61,12 +45,7 @@ public final class FilePublishedAtlas implements PublishedAtlas {
         try {
             Files.createDirectories(mapDir);
             Files.write(mapDir.resolve("atlas.png"), png);
-            JsonObject root = new JsonObject();
-            root.addProperty("cellSize", atlas.layout().cellSize());
-            root.addProperty("cols", atlas.layout().cols());
-            root.addProperty("pixelSize", atlas.layout().pixelSize());
-            root.add("cellIndex", gson.toJsonTree(atlas.layout().cellIndex()));
-            Files.writeString(mapDir.resolve("atlas-layout.json"), gson.toJson(root));
+            AtlasLayoutFiles.write(mapDir.resolve(AtlasLayoutFiles.FILE_NAME), atlas.layout());
         } catch (IOException e) {
             throw new UncheckedIOException("写已发布图集失败: " + mapDir, e);
         }
